--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@ scale=1.0">
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="gatinhos.jpg" alt="logotipo"
 
 class="container imagem">
 
 <h1 class="container titulo">
-Biblioteca Start
+Página dos gatinhos
 </h1>
 <p class="container frase">
-"Aqui cada livro é um <i>start</i> para o seu
+"tudo o que você precisa saber
+ sobre os felinos <i></i>
 
-conhecimento!"</p>
+"</p>
 </div>
 </header>
 </body>
